# Sage

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config_env.py  docker-compose.japan.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
alt_procurement_agent/: __init__.py  grade.py  rank.py  routing.py  runner.py
contracts/: __init__.py  bands.py  outputs.py  signal.py
data/: CONTEXT_BUNDLE_SCHEMA.md  data.md
demo_cache/: 2019_gulf_tanker_attacks.json  2021_suez_blockage.json  2022_ukraine_energy_shock.json  2025_hormuz_standoff.json  2026_hormuz_closure.json  feedback_log.jsonl  scenario_outcomes.jsonl
docker/: alt_procurement_agent.Dockerfile  api_gateway.Dockerfile  base.Dockerfile  frontend.Dockerfile  graphiti.Dockerfile  nginx.conf  reserve_optim_agent.Dockerfile  sage_core.Dockerfile  scenario_agent.Dockerfile  sensory_ais.Dockerfile  sensory_news.Dockerfile  sensory_prices.Dockerfile  sensory_sanctions.Dockerfile
docs/: ASSUMPTIONS.md  CALIBRATION_REPORT.md  DEPLOY_EC2.md  ET_AI_HACKATHON_DEMO_SCRIPT.md  EVALUATION.md  HANDOFF.md  IMPACT.md  METHODOLOGY.md  SCALABILITY.md  data.md  extra_features.md
knowledge/: __init__.py  agent_trace.py  bedrock.py  cascade.py  connection.py  deferred_ingest.py  demo_control.py  edge_learning.py  feedback.py  ingest_queue.py  intelligence_feed.py  local_embedder.py  registry.py  sage_core.py  stub_llm.py  synthesis.py  triage.py  wikilink_processor.py
orchestration/: __init__.py  graph.py  monitor.py  sandbox.py  (+4 more)
(+310 files in other folders)
